# data-pipeline-orchestrator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
airflow/dags/: dbt-osm-france-food-service_export_alimconfiance.py  dbt-restaurants.py  export_alimconfiance.py  google_maps_platform.py  osm-france-food-service.py  tripadvisor.py
airflow/scheduler/: Dockerfile  entrypoint.sh
airflow/webserver/: Dockerfile  entrypoint.sh
suretbon/: dbt_project.yml  profiles.yml  selectors.yml
suretbon/macros/: normalize_restaurant_name.sql
suretbon/models/marts/: restaurants.sql  restaurants_without_google_maps_and_tripadvisor.sql
suretbon/models/staging/: sources.yml  stg_export_alimconfiance.sql  stg_google_maps_platform-place_details.sql  stg_osm-france-food-service.sql  stg_tripadvisor-location_details.sql
